# Buildroot

./: README.md
package/: Config.in  Makefile.autotools.in  Makefile.in  Makefile.package.in
package/UAPIDaemon/: Config.in  S50UAPI  uapidaemon.mk
package/arpcgen/: Config.in  arpcgen.mk
package/attr/: Config.in  attr.mk
package/attr-2.4.47/: config.status  libtool
package/augeas/: Config.in  augeas.mk
package/augeas-1.2.0/: ChangeLog  Makefile  Makefile.in  aclocal.m4  augeas.spec  config.h  config.h.in  config.status  configure  libtool
package/autoconf/: autoconf-2.68-001-armv7.patch  autoconf-2.69-001-armv7.patch  autoconf.mk
package/autoconf-2.69/: GNUmakefile  Makefile  config.status
package/automake/: automake.mk
package/automake-1.12.6/: GNUmakefile  Makefile  config.status  defs  runtest
package/bash/: bash.mk  bash32-034-noreconf.patch  bash32-035-curses.patch.arm  bash32-fix-termap-header-path.patch
package/bash-4.4/: .applied_patches_list  Makefile  Makefile.in  bash  bashbug  bashversion  config.h  config.status  mksignames  mksyntax  version.h
package/bluez/: bluez.mk  (+27 more)
package/libcom_err-5.0/: .applied_patches_list  Makefile  Makefile.am  Makefile.in  SOURCE.INFO  com_err.c  com_err.h  com_err.lo  config.status  config.sub  configure  configure.ac  error.c  error.lo  libcom_err.la  libtool
package/libcom_err-5.0/.deps/: com_err.Plo  error.Plo
package/libcom_err-5.0/.libs/: libcom_err.la  libcom_err.lai  libcom_err.so.0  libcom_err.so.0.0.0
package/libcom_err-5.0/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
(+9060 files in other folders)
